includedir = $(prefix)/include/libiodef

include_HEADERS = common.h			\
		  iodef.h			\
		  iodef-additional-data.h	\
		  iodef-class.h			\
		  iodef-criteria.h		\
		  iodef-criterion-value.h	\
		  iodef-data.h			\
		  iodef-document-helpers.h	\
		  iodef-document-id.h		\
		  iodef-document-print.h		\
		  iodef-document-write.h		\
		  iodef-document-print-json.h		\
		  iodef-object.h		\
		  iodef-path.h			\
		  iodef-time.h			\
		  iodef-tree-data.h		\
		  iodef-tree-wrap.h		\
		  iodef-value.h			\
		  iodef-value-type.h		\
		  prelude-extract.h		\
		  prelude-hash.h		\
		  prelude-linked-object.h	\
		  prelude-list.h		\
		  prelude-log.h			\
		  prelude-failover.h		\
		  prelude-ident.h		\
		  prelude-io.h			\
		  prelude-macros.h		\
		  prelude-message-id.h		\
		  prelude-string.h

nodist_include_HEADERS = prelude-inttypes.h

noinst_HEADERS = iodef-object-prv.h libmissing.h iodef-tree-data.h variable.h ntp.h

-include $(top_srcdir)/git.mk
