includedir = $(prefix)/include/libiodef

include_HEADERS = common.h			\
		  iodef.h			\
		  iodef-additional-data.h	\
		  iodef-class.h			\
		  iodef-criteria.h		\
		  iodef-criterion-value.h	\
		  iodef-data.h			\
		  iodef-document-helpers.h	\
		  iodef-document-id.h		\
		  iodef-document-print.h		\
		  iodef-document-write.h		\
		  iodef-document-print-json.h		\
		  iodef-object.h		\
		  iodef-path.h			\
		  iodef-time.h			\
		  iodef-tree-data.h		\
		  iodef-tree-wrap.h		\
		  iodef-value.h			\
		  iodef-value-type.h		\
		  libiodef-extract.h		\
		  libiodef-hash.h		\
		  libiodef-linked-object.h	\
		  libiodef-list.h		\
		  libiodef-log.h			\
		  libiodef-failover.h		\
		  libiodef-ident.h		\
		  libiodef-io.h			\
		  libiodef-macros.h		\
		  libiodef-document-id.h		\
		  libiodef-string.h

nodist_include_HEADERS = libiodef-inttypes.h

noinst_HEADERS = iodef-object-prv.h libmissing.h iodef-tree-data.h variable.h ntp.h

-include $(top_srcdir)/git.mk
